fixed profile on mobile

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1080,57 +1080,57 @@ body{
   }
 
   .homeUserContainer{
-    height: 360px;
-    width: 90%;
-    margin-left: 5%;
+    height: 445px;
+    width: 100%;
+    margin-left: -.1%;
     margin-top: 3%;
-    margin-bottom: 3%;
-
+    margin-bottom: 40%;
+    border-radius: 0px;
 
     .homeUser{
-      float:left;
       height:100%;
-      width:70%;
+      width:100%;
       box-shadow: 0px 0px 25px 0px grey;
-      border-radius: 5px;
+      border-radius: 0px;
 
       .homeUserPhoto{
         height:70%;
         width:100%;
-        border:1px solid grey;
         display: inline-block;
-        border-top-right-radius: 0px;
-        border-top-left-radius:5px;
+        border-radius: 0px;
+
 
         img{
           height:100%;
           width:100%;
-          border-top-left-radius:5px;
+          border-radius: 0px;
         }
       }
 
       .homeUserInfo{
         height: 30%;
         width: 100%;
-        border:1px solid grey;
         margin-top: -1.5%;
         padding-left: 2%;
         padding-top: 2%;
-        background: white;
+        background: #E79C67;
         border-top: 0px;
+        color:white;
+        border-radius: 0px;
       }
     }
 
     .homeDog{
-      float:right;
-      height:30%;
+      height:25%;
       width:30%;
+      float:left;
+      margin: auto;
+      margin-left: 2.5%;
 
       .homeDogPhoto{
         height:100%;
         width:100%;
-        border:1px solid grey;
-        border-left: 0px;
+        float:left;
 
         img{
           height:100%;
@@ -1142,7 +1142,6 @@ body{
       .homeDogInfo{
         height:45%;
         width:100%;
-        border:1px solid grey;
         margin-top: 2%;
         margin-bottom: 2%;
       }
@@ -1155,7 +1154,6 @@ body{
     margin-left: 13%;
     margin-top: 2%;
     background-color: #D5ECF4;
-    border-radius: 5px;
     border: 1px solid grey;
     color:grey;
 
